--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/webfonts/">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="js/glider.js" ></script>
-    <link rel="stylesheet" type="text/css" href="/css/glider.css">
+    <link rel="stylesheet" href="css/glider.css">
 
 
     <title>Canyour</title>
@@ -224,9 +223,7 @@
                 <div class="art5" src="img/stickers/stick5.jpg">
                     <img src="img/stickers/stick5.jpg" alt="" srcset="">
                 </div>
-
             </div>
-          
             <button aria-label="Previous" class="glider-prev">«</button>
             <button aria-label="Next" class="glider-next">»</button>
             <div role="tablist" class="dots"></div>
@@ -239,6 +236,21 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="js/js.js"></script>
+    <script src="js/glider.js" ></script>
+
 
 </body>
 </html>
+
+<!-- 
+[class^="number-slide"],         <----------Interesante para numerar
+[class*=" number-slide"] 
+    background: grey
+    align-items: center
+    justify-content: center
+    font-size: 80px
+    color: #fff
+    font-weight: 500
+    height: 800px
+    flex-grow: 2
+ -->
