--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             4H176C184.8 384 192 376.8 192 368C192 359.2 184.8 352 
                             176 352H112zM240 384H368C376.8 384 384 376.8 384 368C
                             384 359.2 376.8 352 368 352H240C231.2 352 224 359.2 2
-                            24 368C224 376.8 231.2 384 240 384z"/></svg>
+                        24 368C224 376.8 231.2 384 240 384z"/></svg>
                 </div>
                 <div class="text">
                     <p class="text1">mercadopago</p>
@@ -194,7 +194,7 @@
             </div>
         </div>    
     </div>
-    <div class="art">
+    <div class="art" data-aos="zoom-in" data-aos-duration="500" >
         <img src="img/art.jpg" alt="" srcset="">
         <div class="descr-art">
             <h2>nuestro arte</h2>
@@ -205,7 +205,7 @@
             </div>
         </div>
     </div>
-    <div class="products">
+    <div class="products" data-aos="zoom-in" data-aos-duration="500" >
         <div class="glider-contain">
             <div class="glider">
                 <div class="art1">
@@ -232,12 +232,59 @@
     </div>
     
     <div class="footer">
+        <div class="phrase" data-aos="fade-up" data-aos-duration="1500" >
+            <h2>follow your <br> dreams</h2>
+            <p>sólo se te da una pequeña chispa de locura en la vida, no la pierdas!</p>
+        </div>
+        <div class="info"  >
+            <div class="logo">
+
+            </div>
+            <div class="help" >
+                <ul class="help"  >Ayuda
+                    <li><a href="">Preguntas frecuentes</a></li>
+                    <li><a href="">Guia de talles</a></li>
+                    <li><a href="">Envios y entregas</a></li>
+                    <li><a href="">Opciones de pago</a></li>
+                    <li><a href="">Contactanos</a></li>
+                </ul>
+            </div>
+            <div class="dress" >
+                <ul class="dress">Indumentaria
+                    <li><a href="">Remeras</a></li>
+                    <li><a href="">Trajes de baño</a></li>
+                    <li><a href="">Buzos y canguros</a></li>
+                    <li><a href="">Camperas</a></li>
+                </ul>
+            </div>
+            <div class="equip" >
+                <ul class="equip">Equipamiento
+                    <li><a href="">Mochilas y bolsos</a></li>
+                    <li><a href="">Tapabocas</a></li>
+                </ul>
+            </div>
+            <div class="art-acc" >
+                <ul class="art-acc">Arte y accesorios
+                    <li><a href="">Posters</a></li>
+                    <li><a href="">Stickers</a></li>
+                    <li><a href="">Parches</a></li>
+                    <li><a href="">Pins</a></li>
+                </ul>
+            </div>
+            <div class="social-widgets">
+
+            </div>
+        </div>
+        <div class="rights">
+            <span>©2022 PimPumPills Co. Todos los derechos reservados.</span>
+            <span>Illumine studio</span>
+        </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="js/js.js"></script>
     <script src="js/glider.js" ></script>
-
+    
 
 </body>
 </html>
