--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
             </div>
             <div class="help" >
-                <ul class="help"  >Ayuda
+                <ul class="help"     >Ayuda
                     <li><a href="">Preguntas frecuentes</a></li>
                     <li><a href="">Guia de talles</a></li>
                     <li><a href="">Envios y entregas</a></li>
@@ -280,6 +280,9 @@
             <span>Illumine studio</span>
         </div>
     </div>
+    <button class="top-btn" >
+        <i class="fas fa-angle-double-up"></i>
+    </button>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="js/js.js"></script>
